--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <h1>
         Welcome Dada
     </h1>
+    <form action="">
+        <label for="">EnterName:</label>
+        <input type="text" name="" id="">
+        <label for="">EnterEmail:</label>
+        <input type="text" name="" id="">
+    </form>
 </body>
 </html>
