--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <input type="text" name="" id="">
         <label for="">EnterEmail:</label>
         <input type="text" name="" id="">
+        <label for="">EnterMobile:</label>
+        <input type="text" name="" id="">
     </form>
 </body>
 </html>
